--- a/kubernetes/apps/default/scrypted/app/helmrelease.yaml
+++ b/kubernetes/apps/default/scrypted/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
           app:
             image:
               repository: ghcr.io/koush/scrypted
-              tag: v0.143.0
+              tag: v0.143.0-noble-full
             env:
               SCRYPTED_INSECURE_PORT: &port 80
             resources:
