chore: improve memory limits

--- a/kubernetes/apps/default/qui/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qui/app/helmrelease.yaml
@@ -46,8 +46,8 @@ spec:
             resources:
               requests:
                 cpu: 10m
-              # limits:
-              #   memory: 512Mi
+              limits:
+                memory: 1Gi
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
