--- a/kubernetes/apps/default/esphome/app/helmrelease.yaml
+++ b/kubernetes/apps/default/esphome/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
                 cpu: 5m
                 memory: 512Mi
               limits:
-                memory: 3072Mi
+                memory: 1Gi
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
