--- a/kubernetes/apps/default/calibre-web-automated/app/helmrelease.yaml
+++ b/kubernetes/apps/default/calibre-web-automated/app/helmrelease.yaml
@@ -16,7 +16,7 @@ spec:
           app:
             image:
               repository: ghcr.io/crocodilestick/calibre-web-automated
-              tag: V3.1.4@sha256:577e846f104fd21453ef306eefb4a95dd95b3b9ddd2463a150944494284da0fd
+              tag: v4.0.4@sha256:758f6dd9248c130fe084e93023b10b993ec84d8647dd5ffc9917fc5925b3a50c
             env:
               TZ: Australia/Sydney
               PUID: 1000
