--- a/kubernetes/apps/default/calibre-web-automated/app/helmrelease.yaml
+++ b/kubernetes/apps/default/calibre-web-automated/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
               requests:
                 cpu: 100m
               limits:
-                memory: 512Mi
+                memory: 2Gi
     service:
       app:
         ports:
